FIX: change basic styles, fix buds on mobile, add title to functional buttons

--- a/_dev/css/main.scss
+++ b/_dev/css/main.scss
@@ -1,16 +1,20 @@
 @import "~bourbon/app/assets/stylesheets/bourbon";
 
 .container {
-  padding-right: 15px;
-  padding-left: 15px;
   margin-right: auto;
   margin-left: auto;
+  font-family: arial, sans-serif;
 
   &::after {
     content: '';
     display: inline-block;
     width: 100%;
     clear: both;
+  }
+
+  @media (min-width: 480px) {
+    padding-right: 15px;
+    padding-left: 15px;
   }
 
   @media (min-width: 768px) {
@@ -38,9 +42,16 @@
   margin-right: 5px;
   margin-bottom: 5px;
   margin-left: 5px;
-  border: 1px solid;
-  background-position: 50% 0;
-  background-size: cover;
+  border-radius: 2px;
+  border: 1px solid rgba(150, 150, 150, 0.3137254901960784);
+  background-color: rgb(242, 242, 242);
+  background-position: 50% 34px;
+  background-repeat: no-repeat;
+  transition: all 0.3s linear;
+
+  @media (max-width: 480px) {
+    background-image: none !important;
+  }
 
   @media (min-width: 480px) {
     width: 22.3%;
@@ -50,49 +61,85 @@
   @media (min-width: 768px) {
     width: 150px;
     height: 180px;
-    margin-right: 15px;
-    margin-bottom: 15px;
-    margin-left: 15px;
+    margin-right: 10px;
+    margin-bottom: 20px;
+    margin-left: 10px;
   }
   @media (min-width: 992px) {
     width: 162px;
-    height: 200px;
+    height: 162px;
   }
   @media (min-width: 1200px) {
-    width: 163px;
-    height: 220px;
+    width: 145px;
+    height: 163px;
   }
   @media (min-width: 1750px) {
-    width: 158px;
+    width: 148px;
   }
 
   &:hover {
+    border-color: rgba(150, 150, 150, 1);
+    box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.1), 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+
     .project_buttons {
       transform: translateY(0);
     }
   }
+
   &_copy {
     position: absolute;
-    top: -100px;
+    top: 50px;
+    color: transparent;
   }
+
   &_buttons {
+    z-index: 2;
     position: absolute;
-    top: 0;
+    bottom: 0;
     left: 0;
+    display: none;
     width: 100%;
     padding: 5px 0;
-    background-color: #fff;
+    background-color: rgb(242, 242, 242);
     transition: transform 0.3s linear;
     text-align: center;
 
+    @media (min-width: 480px) {
+      display: block;
+    }
+
     @media (min-width: 1200px) {
-      transform: translateY(-100%);
+      transform: translateY(100%);
     }
 
     > a {
       float: left;
       display: block;
       width: 25%;
+      transition: all 0.3s linear;
+
+      &::before {
+        content: attr(data-title);
+        position: absolute;
+        left: 0;
+        bottom: 100%;
+        width: 100%;
+        padding: 5px;
+        background-color: rgb(242, 242, 242);
+        font-size: 12px;
+        color: #000;
+        box-sizing: border-box;
+        transition: opacity 0.3s linear;
+        opacity: 0;
+        pointer-events: none;
+      }
+
+      &:hover {
+        &::before {
+          opacity: 1;
+        }
+      }
+
       &[href*=not_active] {
         display: none;
       }
@@ -100,15 +147,16 @@
   }
   &__name {
     position: absolute;
-    bottom: 0;
+    top: 0;
     left: 0;
     width: 100%;
     padding: 10px 5px;
-    background-color: #000;
+    background-color: rgb(242, 242, 242);
     font-size: 12px;
-    color: #fff;
+    color: #000;
     text-align: center;
     box-sizing: border-box;
+    -webkit-mask-image: linear-gradient(to right, #000, #000, 150px, transparent);
   }
 
   &__link {
